Sauce Labs Integration completed