@@ -11,134 +11,113 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <cucumber.version>1.2.4</cucumber.version>
-      <java.version>8</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <cucumber.version>1.2.4</cucumber.version>
+    <java.version>8</java.version>
   </properties>
 
   <dependencies>
-      <dependency>
-          <groupId>javax.servlet</groupId>
-          <artifactId>servlet-api</artifactId>
-          <version>2.5</version>
-          <scope>provided</scope>
-      </dependency>
-      <dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-	  <groupId>info.cukes</groupId>
-	  <artifactId>cucumber-junit</artifactId>
-	  <version>${cucumber.version}</version>
-	  <scope>test</scope>
-	</dependency>
-	<dependency>
-	  <groupId>info.cukes</groupId>
-	  <artifactId>cucumber-java8</artifactId>
-	  <version>${cucumber.version}</version>
-	  <scope>test</scope>
-	</dependency>
-	<dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
-	  	<version>3.0.0-beta2</version>
-	</dependency>
-      <dependency>
-          <groupId>com.saucelabs</groupId>
-          <artifactId>sauce_java_common</artifactId>
-          <version>2.1.18</version>
-          <scope>test</scope>
-      </dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-junit</artifactId>
+      <version>${cucumber.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-java8</artifactId>
+      <version>${cucumber.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-picocontainer</artifactId>
+      <version>1.2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>3.0.0-beta2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.saucelabs</groupId>
+      <artifactId>sauce_junit</artifactId>
+      <version>2.1.21</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.saucelabs</groupId>
+      <artifactId>saucerest</artifactId>
+      <version>1.0.34</version>
+    </dependency>
   </dependencies>
-
-    <build>
-        <plugins>
-            <!-- Include Sauce Connect plugin -->
-            <plugin>
-                <groupId>com.saucelabs.maven.plugin</groupId>
-                <artifactId>sauce-connect-plugin</artifactId>
-                <version>2.1.18</version>
-                <configuration>
-                    <sauceUsername>MikeX</sauceUsername>
-                    <sauceAccessKey>0eddcc0d-5b71-49fb-a8a2-ba695d945326</sauceAccessKey>
-                    <!--<options>-i testing</options>-->
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>start-sauceconnect</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>start-sauceconnect</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop-sauceconnect</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop-sauceconnect</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- Use failsafe to run integration tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.19.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- Use Cargo to launch a Jetty instance prior to starting the integration tests -->
-            <plugin>
-                <groupId>org.codehaus.cargo</groupId>
-                <artifactId>cargo-maven2-plugin</artifactId>
-                <version>1.2.0</version>
-                <configuration>
-                    <container>
-                        <containerId>jetty7x</containerId>
-                        <type>embedded</type>
-                    </container>
-                    <deployer>
-                        <type>embedded</type>
-                        <deployables>
-                            <deployable>
-                                <groupId>com.saucelabs</groupId>
-                                <type>war</type>
-                                <artifactId>sauce-connect-example</artifactId>
-                                <properties>
-                                    <context>/sc</context>
-                                </properties>
-                            </deployable>
-                        </deployables>
-                    </deployer>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>start-jetty</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>start</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop-jetty</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-
-    </build>
+<build>
+  <plugins>
+    <plugin>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.5.1</version>
+        <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+    </configuration>
+    </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>2.19.1</version>
+      <configuration>
+        <forkCount>6</forkCount>
+        <reuseForks>false</reuseForks>
+        <argLine>-Duser.language=en</argLine>
+        <argLine>-Xmx1024m</argLine>
+        <argLine>-XX:MaxPermSize=256m</argLine>
+        <argLine>-Dfile.encoding=UTF-8</argLine>
+        <useFile>false</useFile>
+        <includes>
+          <include>**/*AT.class</include>
+        </includes>
+        <testFailureIgnore>true</testFailureIgnore>
+      </configuration>
+    </plugin>
+  <plugin>
+    <artifactId>maven-resources-plugin</artifactId>
+    <version>3.0.1</version>
+    <executions>
+      <execution>
+        <id>copy-resources</id>
+        <phase>validate</phase>
+        <goals>
+          <goal>copy-resources</goal>
+        </goals>
+        <configuration>
+          <outputDirectory>target/test-classes/com/medis/bdd</outputDirectory>
+          <resources>
+            <resource>
+              <directory>src/test/resources</directory>
+              <filtering>true</filtering>
+            </resource>
+          </resources>
+        </configuration>
+      </execution>
+    </executions>
+  </plugin>
+  </plugins>
+</build>
 </project>
